created my portfolio

--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
+  "name": "william-kungu-portfolio",
+  "version": "1.0.0",
   "private": true,
+  "description": "Professional portfolio website for William N. Kungu - Senior Software Engineer",
   "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^7.9.1",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
